# ros2-disaster-robot-sim

./: .gitignore  README.md  run_experiments.sh
config/: benchmark.yaml
disaster_results/run_20260405_115303/: aggregate_results.json  frontier_trial1.pgm  frontier_trial1.yaml  frontier_trial10.pgm  frontier_trial10.yaml  frontier_trial10_collisions.csv  frontier_trial10_ekf.csv  frontier_trial10_metrics.json  frontier_trial1_collisions.csv  frontier_trial1_ekf.csv  frontier_trial1_metrics.json  frontier_trial2.pgm  frontier_trial2.yaml  frontier_trial2_collisions.csv  frontier_trial2_ekf.csv  frontier_trial2_metrics.json  frontier_trial3.pgm  frontier_trial3.yaml  frontier_trial3_collisions.csv  frontier_trial3_ekf.csv  frontier_trial3_metrics.json  frontier_trial4.pgm  frontier_trial4.yaml  frontier_trial4_collisions.csv  frontier_trial4_ekf.csv  frontier_trial4_metrics.json  frontier_trial5.pgm  frontier_trial5.yaml  frontier_trial5_collisions.csv  frontier_trial5_ekf.csv  frontier_trial5_metrics.json  frontier_trial6.pgm  frontier_trial6.yaml  frontier_trial6_collisions.csv  frontier_trial6_ekf.csv  frontier_trial6_metrics.json  frontier_trial7.pgm  frontier_trial7.yaml  frontier_trial7_collisions.csv  frontier_trial7_ekf.csv  (+158 more)
disaster_rl_trainer/disaster_rl_env/: disaster_nav_env.py
disaster_rl_trainer/scripts/: train_curriculum.py  train_ppo.py
disaster_rl_trainer/scripts/models/: disaster_ppo_v2_final.pt
disaster_rl_trainer/scripts/models/tensorboard/PPO_1/: events.out.tfevents.1775449240.DESKTOP-UQSGPQ8.427534.0
src/disaster_navigation/: CMakeLists.txt  package.xml
src/disaster_navigation/config/: ekf_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/disaster_navigation/launch/: full_simulation.launch.py  rl_navigator.launch.py  simulation.launch.py
src/disaster_navigation/rviz/: disaster_full.rviz
src/disaster_robot/: CMakeLists.txt  package.xml
src/disaster_robot/urdf/: disaster_robot.urdf.xacro
src/disaster_sensors/: package.xml  setup.cfg  setup.py
src/disaster_sensors/disaster_sensors/: auto_map_saver.py  benchmark_metrics.py  camera_processor.py  collect_ekf_data.py  ekf_monitor.py  frontier_explorer.py  lidar_processor.py  measure_coverage.py  potential_field_navigator.py  random_walk_patch.py  rl_navigator.py
src/disaster_world/: CMakeLists.txt  package.xml
src/disaster_world/env-hooks/: disaster_world.dsv.in
src/disaster_world/worlds/: disaster_collapsed_building.world
