<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>disaster_robot</name>
  <version>0.1.0</version>
  <description>
    Robot description (URDF/xacro) for the disaster response robot.
    Based on TurtleBot3 Waffle kinematics with:
      - 360-degree LiDAR (RPLidar A2 equivalent, 12m range)
      - RGB camera (640x480, 30fps)
      - IMU (9-DOF)
    All sensors include Gazebo Classic plugins for ROS2 topic publishing.
  </description>
  <maintainer email="newtonadhikari@np.com">Newton Adhikari</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
