<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>disaster_world</name>
  <version>0.1.0</version>
  <description>
    Collapsed building Gazebo world and custom SDF models for disaster response
    robot simulation. Contains rubble piles, collapsed walls, broken pillars,
    and atmospheric debris for testing autonomous navigation.
  </description>
  <maintainer email="newtonadhikari@np.com">Newton Adhikari</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
